# message_sender

./: .env.sample  .gitignore  README.md  data.json  date_test.py  docker-compose.yml  interval.json  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_postcomment_parent.py  0003_remove_posts_image_user_remove_posts_name_button.py
blog/templatetags/: tags_filter.py
config/: config_parse.py  settings.py  urls.py  utils.py
docker/django/: Dockerfile  start
docker/nginx/: nginx.conf
mail_center/: admin.py  apps.py  cache.py  celery.py  exeptions.py  forms.py  mixins.py  models.py  services.py  tasks.py  urls.py  views.py
mail_center/core/: scheduler_core.py
mail_center/migrations/: 0001_initial.py  0002_alter_sendingmessage_options_and_more.py  0002_sendingmessage_owner_send_and_more.py  0003_alter_sendingmessage_options.py  0003_resultssendmessages.py  0004_sendingmessage_date_last_send.py  0004_sendingmessage_slug_alter_sendingmessage_periodicity.py  0005_alter_sendingmessage_slug.py  0005_alter_sendingmessage_status.py  0006_alter_sendingmessage_status.py  0007_alter_resultssendmessages_options_and_more.py  0008_alter_resultssendmessages_result.py  (+2 more)
main_page/: urls.py  views.py
mess/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
messages/: urls.py
our_clients/: admin.py  apps.py  forms.py  mixins.py  models.py  urls.py  views.py
templates/: base.html  paginate.html
users/: admin.py  authentication.py  forms.py  mixins.py  models.py  tasks.py  urls.py  views.py
(+97 files in other folders)
