[tool.poetry]
name = "message-sender"
version = "0.1.0"
description = ""
authors = ["Alex Pavlov <yukiu217@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
django-debug-toolbar = "^4.3.0"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
pytils = "^0.4.1"
django-extensions = "^3.2.3"
docutils = "^0.21.2"
django-phonenumber-field = "^7.3.0"
django-countries = "^7.6.1"
redis = "^5.0.5"
hiredis = "^2.3.2"
django-phonenumbers = "^1.0.1"
django-formset = "^1.4.5"
python-dotenv = "^1.0.1"
celery = "^5.4.0"
django-celery-beat = "^2.6.0"
python-crontab = "^3.1.0"
babel = "^2.15.0"
flake8 = "^7.1.1"
gunicorn = "^23.0.0"
flower = "^2.0.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.24.0"
flower = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
